--- a/SisMaper/App.xaml
+++ b/SisMaper/App.xaml
@@ -2,9 +2,16 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:SisMaper"
+             xmlns:viewmodel="clr-namespace:SisMaper.ViewModel"
+             xmlns:view="clr-namespace:SisMaper.Views"
              StartupUri="Views/MainWindow.xaml">
+
     <Application.Resources>
+
+
+
         <ResourceDictionary>
+
             <ResourceDictionary.MergedDictionaries>
                 <!-- MahApps.Metro resource dictionaries. Make sure that all file names are Case Sensitive! -->
                 <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Controls.xaml" />
@@ -15,4 +22,5 @@
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </Application.Resources>
+    
 </Application>
