--- a/SisMaper/Views/Templates/MyPasswordBox.xaml
+++ b/SisMaper/Views/Templates/MyPasswordBox.xaml
@@ -19,6 +19,7 @@
             Style="{DynamicResource TB}"
             Margin="0,0,0,0"
             Visibility="Collapsed"
+            Text="{Binding Password, ElementName=userControl, UpdateSourceTrigger=PropertyChanged, Mode=TwoWay}"
             MaxLength="{Binding MaxLength, ElementName=userControl, UpdateSourceTrigger=PropertyChanged}"
             FontSize="{Binding FontSize, ElementName=userControl, UpdateSourceTrigger=PropertyChanged}"
             Padding="{Binding ContentPadding, ElementName=userControl, UpdateSourceTrigger=PropertyChanged}" />
