--- a/SisMaper/Views/ViewProdutos.xaml
+++ b/SisMaper/Views/ViewProdutos.xaml
@@ -11,17 +11,11 @@
     xmlns:Dialog="clr-namespace:MahApps.Metro.Controls.Dialogs;assembly=MahApps.Metro"
     Dialog:DialogParticipation.Register="{Binding}"
     mc:Ignorable="d"
-    Height="450" Width="800"
-    
-    
-    >
+    Height="450" Width="800">
 
-    
-    
     <UserControl.DataContext>
         <viewModels:ProdutosViewModel/>
     </UserControl.DataContext>
-
 
     <Grid Background="#FFF6F6F6" >
         <DockPanel>
@@ -107,6 +101,7 @@
                           ColumnWidth="*" ItemsSource="{Binding ProdutosList}" AutoGenerateColumns="False"
                           CanUserAddRows="False" IsReadOnly="True" Margin="0,10,0,24"
                           MouseDoubleClick="Produtos_MouseDoubleClick"
+                          
                           SelectedItem="{Binding ProdutoSelecionado, Mode=TwoWay}">
                     <DataGrid.Columns>
                         <DataGridTextColumn
